// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BubbleTip components BubbleTip config render 1`] = `
<Memo(BubbleTipBase)>
  <View
    key="1"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 20,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 60,
          "paddingVertical": 20,
          "width": 360,
        },
        Object {
          "backgroundColor": "#239c8e",
        },
        Object {
          "backgroundColor": "skyblue",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 32,
            "marginRight": 12,
            "width": 32,
          },
          undefined,
        ]
      }
    />
    <TYText
      align={null}
      color={null}
      numberOfLines={1}
      size={null}
      style={
        Array [
          Object {
            "color": "white",
          },
          Object {
            "color": "red",
          },
        ]
      }
      text={1}
      type={null}
      weight={null}
    />
  </View>
  <View
    key="2"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 20,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 60,
          "paddingVertical": 20,
          "width": 360,
        },
        Object {
          "backgroundColor": "#239c8e",
        },
        undefined,
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 32,
            "marginRight": 12,
            "width": 32,
          },
          undefined,
        ]
      }
    />
    <TYText
      align={null}
      color={null}
      numberOfLines={1}
      size={null}
      style={
        Array [
          Object {
            "color": "white",
          },
          undefined,
        ]
      }
      text={2}
      type={null}
      weight={null}
    />
  </View>
</Memo(BubbleTipBase)>
`;

exports[`BubbleTip components BubbleTip define render 1`] = `
<Memo(BubbleTipBase)>
  <View
    key="1"
  >
    <Text>
      1
    </Text>
  </View>
  <View
    key="2"
  >
    <Text>
      2
    </Text>
  </View>
</Memo(BubbleTipBase)>
`;

exports[`BubbleTip components BubbleTip.Base config render 1`] = `
<Memo(BubbleTipBase)
  leavingTime={1000}
  runInTime={500}
  waitingTime={800}
>
  <View
    key="1"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 20,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 60,
          "paddingVertical": 20,
          "width": 360,
        },
        Object {
          "backgroundColor": "#239c8e",
        },
        Object {
          "backgroundColor": "skyblue",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 32,
            "marginRight": 12,
            "width": 32,
          },
          undefined,
        ]
      }
    />
    <TYText
      align={null}
      color={null}
      numberOfLines={1}
      size={null}
      style={
        Array [
          Object {
            "color": "white",
          },
          Object {
            "color": "red",
          },
        ]
      }
      text={1}
      type={null}
      weight={null}
    />
  </View>
  <View
    key="2"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 20,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 60,
          "paddingVertical": 20,
          "width": 360,
        },
        Object {
          "backgroundColor": "#239c8e",
        },
        undefined,
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 32,
            "marginRight": 12,
            "width": 32,
          },
          undefined,
        ]
      }
    />
    <TYText
      align={null}
      color={null}
      numberOfLines={1}
      size={null}
      style={
        Array [
          Object {
            "color": "white",
          },
          undefined,
        ]
      }
      text={2}
      type={null}
      weight={null}
    />
  </View>
</Memo(BubbleTipBase)>
`;
